# netlib

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
example/: example.cpp
inc/: ipaddr.hpp  netlib.hpp  resolver.hpp  sockaddr.hpp  sockcopy.hpp  tcplistener.hpp  tcpsocketwrapper.hpp  tcpstream.hpp  udpsocket.hpp
src/: ipaddr.cpp  resolver.cpp  sockaddr.cpp  sockcopy.cpp  tcplistener.cpp  tcpsocketwrapper.cpp  tcpstream.cpp  udpsocket.cpp
test/: test.cpp
